--- a/templates/subsystems.hbs
+++ b/templates/subsystems.hbs
@@ -11,7 +11,7 @@
     <section class="content">
         {{#if isGM}}
             <header class="content-header">
-                test
+                You are a GM!
             </header>
         {{/if}}
         {{#each subsystems as |subsystem|}}
