WIP: save current changes

--- a/templates/partials/vp-sidebar.hbs
+++ b/templates/partials/vp-sidebar.hbs
@@ -1,18 +1,20 @@
 <section class="sheet-details sidebar" data-tooltip-direction="UP">
-    <div class="form-group">
-        <label for="activity-points">Current Points</label>
-        <input id="activity-points" name="details.points" type="number" value={{object.details.points}} />
-    </div>
-    <div class="form-group">
-        <label for="activity-endPoint">End Goal</label>
-        <input id="activity-endPoint" name="details.endPoint" type="number" value={{object.details.endPoint}} />
-    </div>
-    <div class="form-group">
-        <label for="activity-turnBased">Turn Based Activity</label>
-        <input id="activity-turnBased" name="details.turnBased" type="checkbox" {{#if object.details.turnBased}}checked{{/if}} />
-    </div>
-    <div class="form-group">
-        <label for="activity-automatic">Accrued Per Turn</label>
-        <input id="activity-automatic" name="details.automatic" type="number" value={{object.details.automatic}} />
+    <div class="inventory-details">
+        <div class="form-group">
+            <label for="activity-points">Current Points</label>
+            <input data-id="activity-points" name="details.points" type="number" value={{object.details.points}} />
+        </div>
+        <div class="form-group">
+            <label for="activity-endPoint">End Goal</label>
+            <input data-id="activity-endPoint" name="details.endPoint" type="number" value={{object.details.endPoint}} />
+        </div>
+        <div class="form-group">
+            <label for="activity-turnBased">Turn Based Activity</label>
+            <input data-id="activity-turnBased" name="details.turnBased" type="checkbox" {{#if object.details.turnBased}}checked{{/if}} />
+        </div>
+        <div class="form-group">
+            <label for="activity-automatic">Accrued Per Turn</label>
+            <input data-id="activity-automatic" name="details.automatic" type="number" value={{object.details.automatic}} />
+        </div>
     </div>
 </section>
