--- a/templates/sub-tabs.hbs
+++ b/templates/sub-tabs.hbs
@@ -1,8 +1,15 @@
-<nav class="sheet-tabs">
-    <div class="sidebar-summary">Activity Settings</div>
-    <div class="tabs" data-tab-container="primary">
-        <a class="list-row" data-tab="description">Description</a>
-        <a class="list-row" data-tab="actions">Actions</a>
-        <a class="list-row" data-tab="rewards">Rewards</a>
+<nav class="sheet-tabs tabs">
+    {{#unless (isEmpty object.details)}}
+        <div class="sidebar-summary">Activity Settings</div>
+    {{/unless}}
+    <div class="selection">
+        {{#each tabs as |tab|}}
+        <a data-action="tab" data-group="{{tab.group}}" data-tab="{{tab.id}}"
+            {{#if tab.cssClass}}class="{{tab.cssClass}}"{{/if}}
+            {{#if tab.tooltip}}data-tooltip="{{tab.tooltip}}"{{/if}}>
+            {{#if tab.icon}}<i class="{{tab.icon}}" inert></i>{{/if}}
+            {{#if tab.label}}<span>{{localize tab.label}}</span>{{/if}}
+        </a>
+        {{/each}}
     </div>
 </nav>
